--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,5 +17,6 @@ dependencies = [
     "soundfile>=0.13.1",
     "tiktoken>=0.12.0",
     "webrtcvad-wheels>=2.0.14",
-    "websockets>=16.0",
+    "websockets==11.0.3",
+    "matplotlib>=3.8.0",
 ]
